--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<title>
-		ALLERGY & NUTRITION
+		JOEY Restaurant Group - Remote Access
 	</title>
 	<style>
 		body {
@@ -12,118 +12,86 @@
 		}
 
 		.linklist {
-			border: 1px solid #ffffff;
+			border: none;
 			border-collapse: collapse;
+			width: 50%;
+			height: 50%;
+			align-content: center;
+			margin: auto;
 		}
 
 		.linklist th {
 			border: none;
-			padding: auto;
-			background: #000000;
+			padding: 10%;
 			font-size: 36;
 			color: #FFFFFF;
 			font-weight: bold;
 			vertical-align: middle;
-			text-align: left;
-			padding-left: 15;
+			text-align: center;
 		}
 
 		.linklist td {
-			border: 1px solid #ffffff;
+			border: 1px dashed #474747;
 			padding: 0;
 			font-size: 32;
 			margin: 0;
 			text-align: center;
 		}
 
-		.linklist th a {
-			color: #FFFFFF;
+		.linklist a {
+			color: #026ccf;
 			text-decoration: none;
 		}
 
-		.linklist th a:hover {
-			background-color: #282828;
+		.linklist a:hover {
+			color: #0285ff;
 		}
 
-		.linklist th a:visited {
-			color: #FFFFFF;
-			text-decoration: none;
+		.linklist a:visited {
+			color: #026ccf;
 		}
-
-		.info {
-			text-align: right;
-			font-size: 12;
-			padding-right: 15;
-		}
-
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-		}
-
-		ul li {
-			border: 1px solid #ffffff;
-			padding: 0.75em;
-			margin: 0;
-		}
-
-		ul li a {
-			display: block;
-			width: 100%;
-			height: 100%;
-			color: #FFFFFF;
-			text-decoration: none;
-		}
-
-		ul li a:hover {
-			background-color: #282828;
-		}
-
-		ul li a:visited {
-			color: #FFFFFF;
+		.icon {
+			height: 3em;
+			width: 3em;
 		}
 	</style>
 </head>
 
 <body>
-	<div style="height:8%">
-		<table class="linklist" height="100%" width="100%">
+	<div style="overflow: hidden">
+		<table class="linklist">
 			<thead>
 				<tr>
-					<th><a href="index.html">ALLERGY & NUTRITION</a></th>
-					<th>
-						<div class="info">swipe right to return to list</div>
+					<th colspan="2">
+						JOEY Restaurant Group
+						<br>
+						Remote Access
 					</th>
 				</tr>
 			</thead>
-		</table>
-	</div>
-	<div style="height:92%;overflow: hidden">
-		<table class="linklist" width="100%" height="100%">
 			<tbody>
 				<tr>
-					<td>
-						<ul>
-							<li>
-								<a href="/allergen_guide/allergy/JOEY_Allergen_Guide.pdf">JOEY - Allergen Guide</a>
-							</li>
-							<li>
-								<a href="/allergen_guide/nutrition/JOEY_Nutrition_Report.pdf">JOEY - Nutrition Guide</a>
-							</li>
-							<li>
-								<a href="/allergen_guide/allergy/LOCAL_Allergen_Guide.pdf">LOCAL - Allergen Guide</a>
-							</li>
-							<li>
-								<a href="/allergen_guide/nutrition/LOCAL_Nutrition_Report.pdf">LOCAL - Nutrition Guide</a>
-							</li>
-							<li>
-								<a href="/allergen_guide/allergy/SALTLIK_Allergen_Guide.pdf">SALTLIK - Allergen Guide</a>
-							</li>
-							<li>
-								<a href="/allergen_guide/nutrition/SALTLIK_Nutrition_Report.pdf">SALTLIK - Nutrition Guide</a>
-							</li>
-						</ul>
+					<td width="50%">
+						<a href="https://cwa-joeyrestaurants.screenconnect.com">
+							<svg class="icon" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet"
+								viewBox="0 0 24 24">
+								<path fill="currentColor"
+									d="M11 14H9a9 9 0 0 1 9-9v2c-3.87 0-7 3.13-7 7m7-3V9c-2.76 0-5 2.24-5 5h2c0-1.66 1.34-3 3-3M7 4c0-1.11-.89-2-2-2s-2 .89-2 2s.89 2 2 2s2-.89 2-2m4.45.5h-2A2.982 2.982 0 0 1 6.5 7h-3C2.67 7 2 7.67 2 8.5V11h6V8.74a4.982 4.982 0 0 0 3.45-4.24M19 17c1.11 0 2-.89 2-2s-.89-2-2-2s-2 .89-2 2s.89 2 2 2m1.5 1h-3c-1.5 0-2.71-1.08-2.95-2.5h-2c.2 2 1.59 3.65 3.45 4.24V22h6v-2.5c0-.83-.67-1.5-1.5-1.5Z" />
+							</svg>
+							<br>
+							Support
+						</a>
+					</td>
+					<td width="50%">
+						<a href="https://account.activedirectory.windowsazure.com/applications/signin/630c3b5a-f691-41ba-9a4d-d41b100a9ec6?tenantId=087c5820-fcc7-4a31-8071-4359bc94596b">
+							<svg class="icon" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet"
+								viewBox="0 0 24 24">
+								<path fill="currentColor"
+									d="M3 2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h7v2H8v2h8v-2h-2v-2h7a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2M3 4h18v12H3M15 5l-3.5 3.5L15 12l1.4-1.4l-2.1-2.1l2.1-2.1M9 8L7.6 9.4l2.1 2.1l-2.1 2.1L9 15l3.5-3.5" />
+							</svg>
+							<br>
+							Remote Access
+						</a>
 					</td>
 				</tr>
 			</tbody>
